<?xml version="1.0"?>
<package format="2">
  <name>rgbd_segmentation</name>
  <version>0.0.0</version>
  <description>The rgbd_segmentation package</description>

  <maintainer email="lukas.rustler@fel.cvut.cz">Lukas Rustler</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>kinova_mujoco</build_depend>
  <build_export_depend>kinova_mujoco</build_export_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>kinova_mujoco</exec_depend>

  <export>

  </export>
</package>
